--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/subViews/TopBarCustomSegmentedView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/subViews/TopBarCustomSegmentedView.xib
@@ -11,36 +11,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="TopBarCustomSegmentedView" customModule="lifeBox_Business" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="479" height="49"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopBarCustomSegmentedView" customModule="lifeBox_Business" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="40"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YmU-dn-5bk">
-                    <rect key="frame" x="0.0" y="21" width="479" height="10"/>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YmU-dn-5bk">
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="39"/>
                     <viewLayoutGuide key="safeArea" id="fg8-wB-Aei"/>
                 </stackView>
-                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hgr-PD-isN" userLabel="highlightView">
-                    <rect key="frame" x="0.0" y="39" width="479" height="10"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GtN-5v-NYn">
+                    <rect key="frame" x="0.0" y="39" width="390" height="1"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="1" id="Pri-Jj-sRW"/>
+                        <constraint firstAttribute="height" constant="1" id="Q3m-B4-FZR"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="YmU-dn-5bk" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="1Yd-Hn-4L5"/>
-                <constraint firstAttribute="height" constant="40" id="INo-QM-sBf"/>
-                <constraint firstItem="YmU-dn-5bk" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="LMr-eU-ERJ"/>
-                <constraint firstItem="hgr-PD-isN" firstAttribute="top" secondItem="YmU-dn-5bk" secondAttribute="bottom" id="dg2-0e-Pne"/>
-                <constraint firstItem="YmU-dn-5bk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="zEk-YK-sg5"/>
+                <constraint firstItem="GtN-5v-NYn" firstAttribute="top" secondItem="YmU-dn-5bk" secondAttribute="bottom" id="GZc-Gy-VGv"/>
+                <constraint firstAttribute="trailing" secondItem="YmU-dn-5bk" secondAttribute="trailing" id="HG4-B7-Wzf"/>
+                <constraint firstItem="GtN-5v-NYn" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Rg4-0A-Kn1"/>
+                <constraint firstAttribute="bottom" secondItem="GtN-5v-NYn" secondAttribute="bottom" id="aTW-st-p6z"/>
+                <constraint firstItem="YmU-dn-5bk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="q6F-sh-17l"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="GtN-5v-NYn" secondAttribute="trailing" id="tnB-ys-WXM"/>
+                <constraint firstItem="YmU-dn-5bk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="v1d-g1-QKq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="highlightView" destination="hgr-PD-isN" id="ekT-cT-ILl"/>
+                <outlet property="separartorView" destination="GtN-5v-NYn" id="W3v-Gt-1ex"/>
                 <outlet property="stackView" destination="YmU-dn-5bk" id="hau-hh-dOg"/>
             </connections>
-            <point key="canvasLocation" x="161.59420289855075" y="-119.53125"/>
+            <point key="canvasLocation" x="49.275362318840585" y="-84.040178571428569"/>
         </view>
     </objects>
     <resources>
