--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
@@ -9,7 +9,17 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContactUsViewController" customModule="lifeBox_Business" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContactUsViewController" customModule="lifeBox_Business" customModuleProvider="target">
+            <connections>
+                <outlet property="descriptionLabel" destination="WnP-L2-Zf2" id="gok-IW-aFL"/>
+                <outlet property="sendButton" destination="O5M-Ln-gJK" id="733-4R-PMV"/>
+                <outlet property="subjectButton" destination="pJ8-v8-cFi" id="RoU-v0-h9g"/>
+                <outlet property="subjectContainerView" destination="q06-FI-X9Q" id="XJ4-Jf-Nzr"/>
+                <outlet property="subjectLabel" destination="DWY-2u-zOT" id="wp4-bN-fS8"/>
+                <outlet property="textField" destination="rUm-5l-2Ob" id="lTM-A0-38N"/>
+                <outlet property="view" destination="iN0-l3-epB" id="olG-sX-klo"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -25,18 +35,85 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q06-FI-X9Q">
+                    <rect key="frame" x="20" y="103" width="335" height="45"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWY-2u-zOT">
+                            <rect key="frame" x="20" y="15.5" width="257" height="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downArrow" translatesAutoresizingMaskIntoConstraints="NO" id="xXu-FE-tnB">
+                            <rect key="frame" x="305" y="19.5" width="10" height="6"/>
+                            <color key="tintColor" name="labelTitle"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="10" id="0RL-pF-9qf"/>
+                                <constraint firstAttribute="height" constant="6" id="Nuh-yW-gPz"/>
+                            </constraints>
+                        </imageView>
+                        <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pJ8-v8-cFi">
+                            <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
+                            <connections>
+                                <action selector="subjectButonPressed:" destination="-1" eventType="touchUpInside" id="ZoS-gx-lPa"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="xXu-FE-tnB" firstAttribute="centerY" secondItem="q06-FI-X9Q" secondAttribute="centerY" id="FnR-0o-pdJ"/>
+                        <constraint firstAttribute="leading" secondItem="pJ8-v8-cFi" secondAttribute="trailing" constant="-335" id="K4E-fp-vQj"/>
+                        <constraint firstItem="pJ8-v8-cFi" firstAttribute="leading" secondItem="q06-FI-X9Q" secondAttribute="leading" id="RWP-21-fyS"/>
+                        <constraint firstAttribute="bottom" secondItem="pJ8-v8-cFi" secondAttribute="bottom" id="Rxg-jQ-NNq"/>
+                        <constraint firstItem="DWY-2u-zOT" firstAttribute="centerY" secondItem="q06-FI-X9Q" secondAttribute="centerY" id="TVJ-PV-cKY"/>
+                        <constraint firstAttribute="trailing" secondItem="xXu-FE-tnB" secondAttribute="trailing" constant="20" id="gbf-XP-tmb"/>
+                        <constraint firstAttribute="trailing" secondItem="DWY-2u-zOT" secondAttribute="trailing" constant="58" id="gwq-is-kPl"/>
+                        <constraint firstAttribute="height" constant="45" id="o8Y-bY-oWt"/>
+                        <constraint firstItem="pJ8-v8-cFi" firstAttribute="top" secondItem="q06-FI-X9Q" secondAttribute="top" id="rRi-1U-GbE"/>
+                        <constraint firstItem="DWY-2u-zOT" firstAttribute="leading" secondItem="q06-FI-X9Q" secondAttribute="leading" constant="20" id="yky-Wv-8Yu"/>
+                    </constraints>
+                </view>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rUm-5l-2Ob">
+                    <rect key="frame" x="20" y="158" width="335" height="209"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5M-Ln-gJK">
+                    <rect key="frame" x="20" y="603" width="335" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="335" id="GYl-oK-zbQ"/>
+                        <constraint firstAttribute="height" constant="44" id="fM3-Ep-h3X"/>
+                    </constraints>
+                    <state key="normal" title="Send"/>
+                    <connections>
+                        <action selector="sendButtonPressed:" destination="-1" eventType="touchUpInside" id="Tej-nl-M1e"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="rUm-5l-2Ob" firstAttribute="top" secondItem="q06-FI-X9Q" secondAttribute="bottom" constant="10" id="3KC-5T-aon"/>
                 <constraint firstItem="WnP-L2-Zf2" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="30" id="IP6-nk-UjF"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="rUm-5l-2Ob" secondAttribute="bottom" constant="300" id="Ib5-sP-yd4"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="q06-FI-X9Q" secondAttribute="trailing" constant="20" id="J6p-Rq-T0N"/>
+                <constraint firstItem="q06-FI-X9Q" firstAttribute="top" secondItem="WnP-L2-Zf2" secondAttribute="bottom" constant="30" id="OmU-zN-b7V"/>
+                <constraint firstItem="O5M-Ln-gJK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Yle-yQ-nf8"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WnP-L2-Zf2" secondAttribute="trailing" constant="40" id="bUF-Ju-hzt"/>
+                <constraint firstItem="q06-FI-X9Q" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="hhh-bn-qpa"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="O5M-Ln-gJK" secondAttribute="bottom" constant="20" id="jcz-tC-zzh"/>
+                <constraint firstItem="rUm-5l-2Ob" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="kT0-1H-9BS"/>
                 <constraint firstItem="WnP-L2-Zf2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="oz0-tg-JpV"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rUm-5l-2Ob" secondAttribute="trailing" constant="20" id="skX-z5-CHP"/>
             </constraints>
-            <point key="canvasLocation" x="-159" y="76"/>
+            <point key="canvasLocation" x="-159.19999999999999" y="75.112443778110944"/>
         </view>
     </objects>
     <resources>
+        <image name="downArrow" width="13" height="8"/>
+        <namedColor name="labelTitle">
+            <color red="0.25098039215686274" green="0.32156862745098042" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
